/* ----------------------------------------------------------------------------
 * cisco.proto -- Protocol Buffer extension definitions
 *
 * August 2015, Robert Wills
 *
 * Copyright (c) 2015 by Cisco Systems, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ----------------------------------------------------------------------------
 */

syntax = "proto2";

import "google/protobuf/descriptor.proto";

message CiscoMessageOptions {
    optional string schema_path = 1;
}

message CiscoFieldOptions {
    optional string name = 1;
    optional string path_element = 2;
}

message CiscoFileOptions {
    optional string metadata = 1;
}

extend google.protobuf.MessageOptions {
    optional CiscoMessageOptions cisco_msg = 29051;
}

extend google.protobuf.FieldOptions {
    optional CiscoFieldOptions cisco_field = 29052;
}

extend google.protobuf.FileOptions {
    optional CiscoFileOptions cisco_file = 29053;
}

